# grafika-mimuw

./: .gitmodules  CMakeLists.txt  README.md
1-window/: CMakeLists.txt
1-window/src/: renderer.cpp  renderer.hpp
1_window/: CMakeLists.txt
2-triangle/: CMakeLists.txt
2-triangle/dependencies/glfw/src/: glfw3.pc
2-triangle/shaders/: main.frag  main.vert
2-triangle/src/: renderer.cpp  renderer.hpp
2_triangle/: CMakeLists.txt
2_triangle/src/: renderer.cpp  renderer.hpp
3-icosahedron/: CMakeLists.txt
3-icosahedron/dependencies/glfw/: cmake_uninstall.cmake
3-icosahedron/shaders/: main.frag  main.vert
3-icosahedron/src/: app1proc.cpp  main.cpp  renderer.cpp  renderer.hpp  vertex.hpp
3_icosahedron/src/: renderer.cpp
4-icosahedron-moving/: CMakeLists.txt
4-icosahedron-moving/shaders/: main.frag  main.vert
4-icosahedron-moving/src/: renderer.cpp  renderer.hpp
5-lighting/shaders/: main.frag  main.vert
5-lighting/src/: renderer.cpp  renderer.hpp  vertex.hpp
5-textured/: CMakeLists.txt
5-textured/shaders/: main.frag  main.vert
5-textured/src/: camera.cpp  main.cpp  renderer.cpp  renderer.hpp  vertex.hpp
6-loaded/: CMakeLists.txt
6-loaded/shaders/: main.frag
6-loaded/src/: camera.hpp  renderer.cpp  renderer.hpp  vertex.hpp
dependencies/: CMakeLists.txt
idk-lighting/: CMakeLists.txt
utilities/: debug.cpp  debug.hpp  gl-shader.cpp  gl-shader.hpp
